--- a/algebra/templates/vertical_sub.html
+++ b/algebra/templates/vertical_sub.html
@@ -58,6 +58,7 @@ var x = document.getElementsByClassName("correct");
 var y = document.getElementsByClassName("wrong");
 
 var feedcount = 0;
+var wronghint = 0;
 
 
 function check0()
@@ -388,6 +389,11 @@ document.getElementsByClassName('line1')[0].style.display = 'block';
 document.getElementsByClassName('line1')[1].style.display = 'block';
 document.getElementById("hint-btn").disabled = true;
 document.getElementById("hint-btn").style.backgroundColor = "grey";
+
+}
+
+function wrong(){
+  wronghint++;
 }
 
 {% endblock %}
@@ -396,10 +402,10 @@ document.getElementById("hint-btn").style.backgroundColor = "grey";
 {% block topic %}Vertical Subtraction{% endblock %}
 
 {% block hint %}
-<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn1">Change sign of Eq1</button>
-<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn2">Write Eq1 & change sign of Eq2</button>
+<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn1" onclick="wrong();">Change sign of Eq1</button>
+<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn2" onclick="wrong();">Write Eq1 & change sign of Eq2</button>
 <button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" onclick="right1();" id="btn3">Write Eq1 & Eq2</button>
-<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn4">Change sign of Eq2</button>
+<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn4" onclick="wrong();">Change sign of Eq2</button>
 {% endblock %}
 
 
@@ -408,9 +414,9 @@ document.getElementById("hint-btn").style.backgroundColor = "grey";
 <br><br>
 <div class="line1" style="display:none">
   <div style="margin-left:50px;">
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check0();">{{ answer.varx }}+
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check1();">{{ answer.vary }}+
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check2();">{{ answer.varz }}
+    <input type="text" class="quo" required name="quo" maxlength="3" size="3" onblur="check0();">{{ answer.varx }}+
+    <input type="text" class="quo" required name="quo" maxlength="3" size="3" onblur="check1();">{{ answer.vary }}+
+    <input type="text" class="quo" required name="quo" maxlength="3" size="3" onblur="check2();">{{ answer.varz }}
     <br><br>
   </div>
 </div>
@@ -419,9 +425,9 @@ document.getElementById("hint-btn").style.backgroundColor = "grey";
     <h1>-</h1>
   </div>
   <div style="margin-left:50px;">
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check3();">{{ answer.varx }}+
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check4();">{{ answer.vary }}+
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check5();">{{ answer.varz }}
+    <input type="text" class="quo" name="quo" required maxlength="3" size="3" onblur="check3();">{{ answer.varx }}+
+    <input type="text" class="quo" name="quo" required maxlength="3" size="3" onblur="check4();">{{ answer.vary }}+
+    <input type="text" class="quo" name="quo" required maxlength="3" size="3" onblur="check5();">{{ answer.varz }}
 
     <br>
     <h1>---------------------</h1>
