--- a/fractions/templates/layout.html
+++ b/fractions/templates/layout.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-					<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
+					<a class="nav-link a1" id="home_nav" href="#">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
@@ -59,6 +59,7 @@
         </ul>
       </div>
       <div class="time-card" style="height: 55vh;">
+        <form onsubmit="nextfunc();">
         <div class="card-body" style="width: 80%;">
 
           {% block content %}{% endblock %}
@@ -113,14 +114,18 @@
         <i class="bi bi-circle-fill"></i>
         <i class="bi bi-circle-fill"></i>
         <i class="bi bi-circle-fill"></i>
-        <a href="#" class="btn btn-success next" id="next-btn"> Next</a>
+        <button type="submit" class="btn btn-success next" id="next-btn"> Next</button>
       </div>
     </div>
+  </form>
   </div>
   <script>
-      window.onload = (event) => {
-        sessionStorage.removeItem(count);
-      };
+    
+      // window.onload = (event) => {
+      //   if (sessionStorage.count) { 
+      //     sessionStorage.removeItem(count);
+      //   }
+      // };
     $(document).ready(function() {
       $('.toast').toast('hide');
       var x = sessionStorage.count;
@@ -169,7 +174,8 @@
 
       })
 
-      $('#next-btn').click(function(event) {
+      
+      function nextfunc(){
         $('.toast').toast('show');
         if (sessionStorage.count) {
           sessionStorage.count = Number(sessionStorage.count) + 1;
@@ -184,15 +190,8 @@
 
         if (sessionStorage.count == 4) {
 
-          let keys = Object.keys(sessionStorage);
-          for (let key of keys) {
-            data[`${key}`] = `${sessionStorage.getItem(key)}`;
-            sessionStorage.removeItem(`${key}`);
-          }
           // event.preventDefault();
           // event.stopPropagation();
-          sessionStorage.removeItem('count');
-          console.log(data);
           $.get('/endTime', {
             'quesid': quesid,
             'qcount': Number(sessionStorage.count),
@@ -204,6 +203,13 @@
           }, function(response) {
             console.log("done");
           });
+
+          let keys = Object.keys(sessionStorage);
+          for (let key of keys) {
+            data[`${key}`] = `${sessionStorage.getItem(key)}`;
+            sessionStorage.removeItem(`${key}`);
+          }
+          sessionStorage.removeItem('count');
 
           alert("Excellent!  You finished all 4 questions");
           $.ajax({
@@ -240,8 +246,11 @@
         }
 
 
-      })
-    })
+    
+  }
+
+})
+      
   </script>
 
 </body>
