--- a/fractions/templates/layout_easy.html
+++ b/fractions/templates/layout_easy.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-					<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
+					<a class="nav-link a1" id="home_nav" href="">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
@@ -119,11 +119,13 @@
     </div>
   </div>
   <script>
+    
       window.onload = (event) => {
         sessionStorage.removeItem('key');
     };
 
     $(document).ready(function() {
+      let wronghint = 0;
       $('.toast').toast('hide');
       var x = sessionStorage.count;
       console.log("count " + x);
@@ -157,16 +159,18 @@
         qid: quesid
       };
       var hint_count = 0;
+      var getTimes=[];
       $('#hint-btn').click(function() {
-        hint_count++;
-        var time = new Date();
-        $.get('/getTime', {
-          'quesid': quesid,
-          'hint_count': hint_count,
-          'time': time
-        }, function(response) {
-          console.log("done");
-        });
+        getTimes[hint_count++]=new Date().getTime();
+        // hint_count++;
+        // var time = new Date();
+        // $.get('/getTime', {
+        //   'quesid': quesid,
+        //   'hint_count': hint_count,
+        //   'time': time
+        // }, function(response) {
+        //   console.log("done");
+        // });
 
       })
 
@@ -179,18 +183,28 @@
         }
 
 
-        let score = 25 - (5 * hint_count);
+        let score = 25 - (5 * hint_count)-wronghint;
         sessionStorage.setItem(x, score);
         console.log(sessionStorage.getItem(x));
         if (sessionStorage.count == 4) {
-          console.log(sessionStorage.count);
+          $.get('/endTime', {
+            'quesid': quesid,
+            'qcount': Number(sessionStorage.count),
+            'hcount' : hint_count,
+            'htime' : JSON.stringify(getTimes),
+            'score' : score,
+            'wrong' : feedcount,
+            'wronghint':wronghint
+          }, function(response) {
+            console.log("done");
+          });
+
           let keys = Object.keys(sessionStorage);
           for (let key of keys) {
             data[`${key}`] = `${sessionStorage.getItem(key)}`;
             sessionStorage.removeItem(`${key}`);
           }
           sessionStorage.removeItem('count');
-          console.log(data);
 
 
           alert("Excellent!  You finished all 4 questions");
@@ -212,6 +226,17 @@
           console.log("After ajax call");
         }
         else {
+          $.get('/endTime', {
+            'quesid': quesid,
+            'qcount': Number(sessionStorage.count),
+            'hcount' : hint_count,
+            'htime' : JSON.stringify(getTimes),
+            'score' : score,
+            'wrong' : feedcount,
+            'wronghint':wronghint
+          }, function(response) {
+            console.log("done");
+          });
           setTimeout(function() {
             location.reload()
           }, 3000);
