--- a/fractions/templates/Normal_form.html
+++ b/fractions/templates/Normal_form.html
@@ -258,22 +258,22 @@ function wrong(){
 <h5 class="card-title">{{ answer.que }}</h5>
 <div class="ryt1">
   <label for="spf" style="display:none" class="fbox">Normal Form : </label>
-  <input type="text" id="spf" name="rem" maxlength="8" size="2" class="num fbox" onblur="check_num1();" style="display: none;" required>
+  <input type="text" id="spf" name="rem1" maxlength="8" size="2" class="num fbox" onblur="check_num1();" style="display: none;">
   <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
   <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
   <h5 class="fbox" style="display: none;">-------</h5>
-  <input type="text" id="rem4" name="rem" maxlength="8" size="2" class="den fbox" onblur="check_den1();" style="display: none;" required>
+  <input type="text" id="rem4" name="rem2" maxlength="8" size="2" class="den fbox" onblur="check_den1();" style="display: none;">
   <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
   <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
   <br><br>
 
 
   <label for="quo3" style="display:block">Solution : </label>
-  <input type="text" id="quo3" name="rem" maxlength="8" size="2" class="num" onblur="check_num2();" required>
+  <input type="text" id="quo3" name="rem3" maxlength="8" size="2" class="num" onblur="check_num2();" required>
   <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
   <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
   <h5>-------</h5>
-  <input type="text" id="rem4" name="rem" maxlength="8" size="2" class="den" onblur="check_den2();" required>
+  <input type="text" id="rem4" name="rem4" maxlength="8" size="2" class="den" onblur="check_den2();" required>
   <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
   <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
   <br><br>
