--- a/algebra/templates/vertical_sub.html
+++ b/algebra/templates/vertical_sub.html
@@ -402,10 +402,10 @@ function wrong(){
 {% block topic %}Vertical Subtraction{% endblock %}
 
 {% block hint %}
-<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn1" onclick="wrong();">Change sign of Eq1</button>
-<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn2" onclick="wrong();">Write Eq1 & change sign of Eq2</button>
-<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" onclick="right1();" id="btn3">Write Eq1 & Eq2</button>
-<button type="button" class="btn btn-secondary" style="margin-bottom:30px;width:100%;" id="btn4" onclick="wrong();">Change sign of Eq2</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%;" id="btn1" onclick="wrong();">Change sign of Eq1</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%;" id="btn2" onclick="wrong();">Write Eq1 & change sign of Eq2</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%;" onclick="right1();" id="btn3">Write Eq1 & Eq2</button>
+<button type="button" class="btn btn-info" style="margin-bottom:30px;width:100%;" id="btn4" onclick="wrong();">Change sign of Eq2</button>
 {% endblock %}
 
 
@@ -414,9 +414,9 @@ function wrong(){
 <br><br>
 <div class="line1" style="display:none">
   <div style="margin-left:50px;">
-    <input type="text" class="quo" required name="quo" maxlength="3" size="3" onblur="check0();">{{ answer.varx }}+
-    <input type="text" class="quo" required name="quo" maxlength="3" size="3" onblur="check1();">{{ answer.vary }}+
-    <input type="text" class="quo" required name="quo" maxlength="3" size="3" onblur="check2();">{{ answer.varz }}
+    <input type="text" class="quo"  name="quo" maxlength="3" size="3" onblur="check0();">{{ answer.varx }}+
+    <input type="text" class="quo"  name="quo" maxlength="3" size="3" onblur="check1();">{{ answer.vary }}+
+    <input type="text" class="quo"  name="quo" maxlength="3" size="3" onblur="check2();">{{ answer.varz }}
     <br><br>
   </div>
 </div>
@@ -425,12 +425,12 @@ function wrong(){
     <h1>-</h1>
   </div>
   <div style="margin-left:50px;">
-    <input type="text" class="quo" name="quo" required maxlength="3" size="3" onblur="check3();">{{ answer.varx }}+
-    <input type="text" class="quo" name="quo" required maxlength="3" size="3" onblur="check4();">{{ answer.vary }}+
-    <input type="text" class="quo" name="quo" required maxlength="3" size="3" onblur="check5();">{{ answer.varz }}
+    <input type="text" class="quo" name="quo"  maxlength="3" size="3" onblur="check3();">{{ answer.varx }}+
+    <input type="text" class="quo" name="quo"  maxlength="3" size="3" onblur="check4();">{{ answer.vary }}+
+    <input type="text" class="quo" name="quo"  maxlength="3" size="3" onblur="check5();">{{ answer.varz }}
 
     <br>
-    <h1>---------------------</h1>
+    <h1>------------</h1>
     <br>
   </div>
 </div>
