--- a/fractions/templates/division copy.html
+++ b/fractions/templates/division copy.html
@@ -48,11 +48,11 @@ swal("Oops!", "Checkout hint for help", "error");
 
 {% for i in range(0,3,2) %}
 <h5 class="card-title">{{easy.q[i]}}</h5>
-{{ easy.label1 }}: <input type="text" class="quo" onchange="checkQuo({{ i }});">
+{{ easy.label1 }}: <input type="text" class="quo"  required onchange="checkQuo({{ i }});">
 <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
 <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
 <br><br><br>
-{{ easy.label2 }}: <input type="text" class="rem" onchange="checkRem({{ i+1 }});">
+{{ easy.label2 }}: <input type="text" class="rem" required onchange="checkRem({{ i+1 }});">
 <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
 <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
 <br><br>
