--- a/fractions/templates/division.html
+++ b/fractions/templates/division.html
@@ -66,11 +66,11 @@ $("#hint_img").attr("src", source);
 {% block content %}
 {% for i in range(0,3,2) %}
 <h5 class="card-title">{{easy.q[i]}}</h5>
-{{ easy.label1 }}: <input type="text" id="quo" onchange="checkQuo({{ i }});">
+{{ easy.label1 }}: <input type="text" id="quo" onchange="checkQuo({{ i }});"  required>
 <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
 <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
 <br><br>
-{{ easy.label2 }}: <input type="text" id="rem" onchange="checkRem({{ i+1 }});">
+{{ easy.label2 }}: <input type="text" id="rem" onchange="checkRem({{ i+1 }});" required>
 <i class="fal fa-check correct fa-2x" style="display: none; color: green;"></i>
 <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
 <br><br>
