--- a/fractions/templates/layout_easy.html
+++ b/fractions/templates/layout_easy.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-					<a class="nav-link a1" id="home_nav" href="">Home</a>
+					<a class="nav-link a1" id="home_nav" href="#">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
@@ -46,8 +46,9 @@
   <div class="container main">
     <div class="card">
 
-      <div class="card-header white" style="color: #0070BB; background-color:rgba(0,0,0,.03);">
+      <div  class="card-header white" style=" display: flex;justify-content: space-between;align-items: center;color: #0070BB; background-color:rgba(0,0,0,.03);">
         <h3>{% block chapter %}{% endblock %} - {% block topic %}{% endblock %}</h3>
+        <a href="#" onclick="quit();" id="quit" class="btn btn-danger">Quit</a>
       </div>
 
       <div class="card1">
@@ -60,7 +61,7 @@
       </div>
 
       <div class="time-card">
-
+        <form id="submit-form" method="POST">
         <div class="card-body" style="width: 80%;height: 50vh;">
           {% block content %}{% endblock %}
         </div>
@@ -114,9 +115,10 @@
         <i class="bi bi-circle-fill"></i>
         <i class="bi bi-circle-fill"></i>
         <i class="bi bi-circle-fill"></i>
-        <a href="" class="btn btn-success next" id="next-btn">Next</a>
+        <button type="submit" class="btn btn-success next" id="next-btn">Next</button>
       </div>
     </div>
+  </form>
   </div>
   <script>
     
@@ -136,7 +138,22 @@
         document.getElementsByClassName("bi")[i].classList.add("done");
       }
 
+      $('#quit').click(function() {
+        if (sessionStorage.count < 4 || sessionStorage.count == null) {
+          if (confirm("Your score will not be saved")) {
+            $('#quit').attr('href', "{{ url_for('home_bp.home') }}");
+          } else {
+            return false;
+          }
 
+          let keys = Object.keys(sessionStorage);
+          for (let key of keys) {
+            sessionStorage.removeItem(`${key}`);
+          }
+          sessionStorage.removeItem(count);
+        }
+
+      })
       $('#home_nav').click(function() {
         if (sessionStorage.count < 4 || sessionStorage.count == null) {
           if (confirm("Your score will not be saved")) {
@@ -174,14 +191,16 @@
 
       })
 
-      $('#next-btn').click(function() {
+      
+
+        $("#submit-form").submit(function(e){
+        e.preventDefault();
         $('.toast').toast('show');
         if (sessionStorage.count) {
           sessionStorage.count = Number(sessionStorage.count) + 1;
         } else {
           sessionStorage.count = 1;
         }
-
 
         let score = 25 - (5 * hint_count)-wronghint;
         sessionStorage.setItem(x, score);
