--- a/algebra/templates/algebra2.html
+++ b/algebra/templates/algebra2.html
@@ -1,5 +1,7 @@
 {% extends "layout_easy.html" %}
 {% block script %}
+
+var feedcount=0;
 $( document ).ready(function() {
   monobitri = ["","Monomial", "Binomial", "Trinomial"];
   likeunlike = ["", "Like", "Unlike"];
@@ -28,6 +30,7 @@ function check(i){
     document.getElementsByClassName("step0")[i].classList.add("active");
   }
   else {
+    feedcount++;
     if({{ easy.num }}=='1' ){
       document.getElementsByClassName("wrong")[i].style.display="inline";
       document.getElementsByClassName("correct")[i].style.display="none";
@@ -36,6 +39,7 @@ function check(i){
       document.getElementsByClassName("wrong")[i].style.display="inline";
       document.getElementsByClassName("correct")[i].style.display="none";
     }
+    swal("Oops!", "Checkout hint for help", "error");
   }
 }
 {% endblock %}
