--- a/algebra/templates/algebra_easy.html
+++ b/algebra/templates/algebra_easy.html
@@ -2,6 +2,7 @@
 
 
 {% block script %}
+var feedcount=0;
   $( document ).ready(function() {
     var source = "{{ url_for('static', filename = 'images/algebra_terms.jpeg') }}";
     if({{ easy.num }} == '2')
@@ -22,6 +23,7 @@
       document.getElementsByClassName("step0")[i].classList.add("active");
     }
     else{
+      feedcount++;
       if({{ easy.num }} == '1'){
         document.getElementsByClassName("wrong")[i].style.display="inline";
         document.getElementsByClassName("correct")[i].style.display="none";
@@ -29,7 +31,9 @@
       else{
         document.getElementsByClassName("wrong")[i].style.display="inline";
         document.getElementsByClassName("correct")[i].style.display="none";
+        
       }
+      swal("Oops!", "Checkout hint for help", "error");
     }
   }
 
