--- a/fractions/templates/division copy.html
+++ b/fractions/templates/division copy.html
@@ -1,8 +1,16 @@
 {% extends "layout_easy.html" %}
 
 {% block script %}
+
+$( document ).ready(function() {
+    var source = "{{ url_for('static', filename = 'images/longDivision.png') }}";
+    document.getElementById("hint_img").src = source;
+      console.log( "ready!" );
+  });
+
 var x = document.getElementsByClassName("correct");
 var y = document.getElementsByClassName("wrong");
+var feedcount=0;
 var ans=["{{ easy.ans_num[0] }}","{{ easy.ans_den[0] }}","{{ easy.ans_num[1] }}","{{ easy.ans_den[1] }}"]
 console.log(ans)
 function checkQuo(i){
@@ -13,6 +21,7 @@ document.getElementsByClassName("step0")[i].classList.add("active");
 }
 else{
 if(document.getElementsByTagName("input")[i].value != ""){
+feedcount++;
 $(x[i]).hide();
 $(y[i]).show();
 document.getElementsByTagName("input")[i].value = "";
@@ -30,6 +39,7 @@ document.getElementsByClassName("step0")[i].classList.add("active");
 }
 else{
 if(document.getElementsByTagName("input")[i].value != ""){
+feedcount++;
 $(x[i]).hide();
 $(y[i]).show();
 document.getElementsByTagName("input")[i].value = "";
@@ -59,6 +69,6 @@ swal("Oops!", "Checkout hint for help", "error");
 {% endfor %}
 {% endblock %}
 
-{% block hint %}
+<!-- {% block hint %}
 <img src="{{ url_for('static', filename = 'images/longDivision.png') }}" alt="" style="margin-left: 30%;">
-{% endblock %}
+{% endblock %} -->
