--- a/fractions/templates/division.html
+++ b/fractions/templates/division.html
@@ -17,6 +17,7 @@ $( document ).ready(function() {
 
 var x = document.getElementsByClassName("correct");
 var y = document.getElementsByClassName("wrong");
+var feedcount=0;
 var ans=["{{ easy.ans_num[0] }}","{{ easy.ans_den[0] }}","{{ easy.ans_num[1] }}","{{ easy.ans_den[1] }}"]
 console.log(ans)
 function checkQuo(i){
@@ -27,6 +28,7 @@ document.getElementsByClassName("step0")[i].classList.add("active");
 }
 else{
 if(document.getElementsByTagName("input")[i].value != ""){
+  feedcount++;
 $(x[i]).hide();
 $(y[i]).show();
 document.getElementsByTagName("input")[i].value = "";
@@ -43,6 +45,7 @@ document.getElementsByClassName("step0")[i].classList.add("active");
 }
 else{
 if(document.getElementsByTagName("input")[i].value != ""){
+  feedcount++;
 $(x[i]).hide();
 $(y[i]).show();
 document.getElementsByTagName("input")[i].value = "";
