--- a/home/templates/EditUserScore.html
+++ b/home/templates/EditUserScore.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav white">
-		<a class="navbar-brand" href="#">Logo PhiloMath</a>
+		<a class="navbar-brand" href="#">PhiloMath</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
