--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -36,7 +36,7 @@
           <a class="nav-link a1" href="#features">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link a1" href="#contacts">Contact</a>
+          <a class="nav-link a1" href="#">Contact</a>
         </li>
       </ul>
     </div>
@@ -92,7 +92,7 @@
 
     </div>
   </section>
-  <section id="contacts" class="sec blue" style="padding: 3rem;">
+  <!-- <section id="contacts" class="sec blue" style="padding: 3rem;">
 
     <div class="container" style="border-radius: 30px;background-color:blanchedalmond;">
 
@@ -144,7 +144,7 @@
         </div>
       </form>
     </div>
-  </section>
+  </section> -->
   </div>
   </div>
   </div>
