--- a/algebra/templates/layout.html
+++ b/algebra/templates/layout.html
@@ -66,10 +66,9 @@
           {% block content %}{% endblock %}
 
         </div>
-
+        </form>
       </div>
 
-      <!-- </div> -->
       <div class="modal fade" id="myModal" role="dialog" style="margin-top: 50px;">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -81,10 +80,6 @@
             <div class="modal-body">
               <p>Select the option you think would be the beginning step of this problem</p>
               {% block hint %}
-              <!-- <button class="btn btn-info" id = "1" style="width: 100%; margin: 10px auto;">{% block option_1 %}{% endblock%}</button>
-                  <button class="btn btn-info" id = "2" style="width: 100%; margin: 10px auto;">{% block option_2 %}{% endblock%}</button>
-                  <button class="btn btn-info" id = "3" style="width: 100%; margin: 10px auto;">{% block option_3 %}{% endblock%}</button>
-                  <button class="btn btn-info" id = "4" style="width: 100%; margin: 10px auto;">{% block option_4 %}{% endblock%}</button> -->
               {% endblock %}
             </div>
             <div class="modal-footer">
@@ -172,18 +167,7 @@
       var getTimes=[];
       $('#hint-btn').click(function() {
         getTimes[hint_count++]=new Date().getTime();
-        // hint_count++;
-        // var time = new Date();
-        // $.get('/getTime', {
-        //   'quesid': quesid,
-        //   'hint_count': hint_count,
-        //   'time': time
-        // }, function(response) {
-        //   console.log("done");
-        // });
       })
-
-      
 
         $("#submit-form").submit(function(e){
         e.preventDefault();
@@ -198,7 +182,7 @@
         sessionStorage.setItem(x, score);
         console.log(sessionStorage.getItem(x));
 
-        if (sessionStorage.count == 4) {
+        if (sessionStorage.count === 4) {
           $.get('/endTime', {
             'quesid': quesid,
             'qcount': Number(sessionStorage.count),
