--- a/home/templates/UserScore.html
+++ b/home/templates/UserScore.html
@@ -134,7 +134,7 @@
                         <h1 class="card-title">Algebra</h1>
                         <div class="card-body">
 
-                          <div id='myDiv2'><!-- Plotly chart will be drawn inside this DIV --></div>
+                          <div id='myDiv2'></div>
 
                           <button class="btn btn-info" onclick="show('algebra');">View more</button>
                           
@@ -147,7 +147,7 @@
                         <div class="card-body">
 
 
-                          <div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
+                          <div id='myDiv'></div>
                           <button class="btn btn-info" onclick="show('fraction');">View more</button>
                           
 
@@ -189,7 +189,6 @@
 <script src='https://cdn.plot.ly/plotly-2.3.1.min.js'></script>
 
 
-<!-- Chart code -->
 <script src='https://cdn.plot.ly/plotly-2.3.1.min.js'></script>
 <script>
   var fraction = [{
